@@ -2,5 +2,6 @@
 	.type	getcallerpc,@function
 	.global	getcallerpc
 getcallerpc:
-	movl	4(%ebp), %eax
+	movl	4(%esp), %eax
+	movl	-4(%eax), %eax
 	ret
