@@ -1,7 +1,8 @@
 	.align	4
 	.globl	getcallerpc
 getcallerpc:
-	movl	4(%ebp),%eax
+	movl	4(%esp), %eax
+	movl	-4(%eax), %eax
 	ret	
 	.align	4
 	.type	getcallerpc,@function
