@@ -1,3 +1,6 @@
+20110629
+	change x86 getcallerpc to avoid use of %ebp [issue 266]
+	change type of getcallerpc to uintptr from ulong
 20110619
 	emu/port/devfs-posix.c: put major/minor st_dev into path without mapping (with luck)
 	emu/port/kproc-pthreads.c: ensure pthread stack is at least PTHREAD_STACK_MIN (plus slop)
